release/boutique-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  labels:
    istio-injection: enabled
