release/ghz.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghz
  labels:
    app: ghz
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: ghz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghz-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghz
  template:
    metadata:
      annotations:
        # This annotation causes Envoy to serve cluster.outbound statistics via 15000/stats
        # in addition to the stats normally served by Istio.  The Circuit Breaking example task
        # gives an example of inspecting Envoy stats.
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
      labels:
        app: ghz
    spec:
      containers:
      - name: ghz
        image: bakjos/ghz:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /app/pb
          name: demo-pb
        ports:
        - containerPort: 80
          name: http-ghz
      volumes:
      - name: demo-pb
        configMap:
          name: demo-pb
