release/istio-manifests.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ----------------------------------------------------------
# WARNING: This file is autogenerated. Do not manually edit.
# ----------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
      app: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paymentservice
spec:
  hosts:
  - paymentservice
  http:
  - route:
    - destination:
        host: paymentservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paymentservice
spec:
  host: paymentservice
  subsets:
  - name: v1
    labels:
      app: paymentservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: checkoutservice
spec:
  hosts:
  - checkoutservice
  http:
  - route:
    - destination:
        host: checkoutservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: checkoutservice
spec:
  host: checkoutservice
  subsets:
  - name: v1
    labels:
      app: checkoutservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productcatalogservice
spec:
  host: productcatalogservice
  subsets:
  - name: v1
    labels:
      app: productcatalogservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice
spec:
  hosts:
  - recommendationservice
  http:
  - route:
    - destination:
        host: recommendationservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendationservice
spec:
  host: recommendationservice
  subsets:
  - name: v1
    labels:
      app: recommendationservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adservice
spec:
  hosts:
  - adservice
  http:
  - route:
    - destination:
        host: adservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: adservice
spec:
  host: adservice
  subsets:
  - name: v1
    labels:
      app: adservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartservice
spec:
  hosts:
  - cartservice
  http:
  - route:
    - destination:
        host: cartservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cartservice
spec:
  host: cartservice
  subsets:
  - name: v1
    labels:
      app: cartservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currencyservice
spec:
  hosts:
  - currencyservice
  http:
  - route:
    - destination:
        host: currencyservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: currencyservice
spec:
  host: currencyservice
  subsets:
  - name: v1
    labels:
      app: currencyservice
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice
spec:
  hosts:
  - emailservice
  http:
  - route:
    - destination:
        host: emailservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: emailservice
spec:
  host: emailservice
  subsets:
  - name: v1
    labels:
      app: emailservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shippingservice
spec:
  hosts:
  - shippingservice
  http:
  - route:
    - destination:
        host: shippingservice
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shippingservice
spec:
  host: shippingservice
  subsets:
  - name: v1
    labels:
      app: shippingservice

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-cart
spec:
  hosts:
  - redis-cart
  http:
  - route:
    - destination:
        host: redis-cart
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis-cart
spec:
  host: redis-cart
  subsets:
  - name: v1
    labels:
      app: redis-cart


# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: allow-egress-googleapis
# spec:
#   hosts:
#   - "accounts.google.com" # Used to get token
#   - "*.googleapis.com"
#   ports:
#   - number: 80
#     protocol: HTTP
#     name: http
#   - number: 443
#     protocol: HTTPS
#     name: https
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: allow-egress-google-metadata
# spec:
#   hosts:
#   - metadata.google.internal
#   addresses:
#   - 169.254.169.254 # GCE metadata server
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
#   - number: 443
#     name: https
#     protocol: HTTPS
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: frontend
# spec:
#   hosts:
#   - "frontend.default.svc.cluster.local"
#   http:
#   - route:
#     - destination:
#         host: frontend
#         port:
#           number: 80
# ---
